--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Mizu Code</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/vs2015.min.css">
-    <link rel="stylesheet" type="text/css" href="styles.css" id="themeStylesheet">
+    <link rel="stylesheet" type="text/css" href="http://127.0.0.1:8765/theme.css" id="themeStylesheet">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
 </head>
