--- a/src/index.html
+++ b/src/index.html
@@ -112,6 +112,8 @@
             </div>
         </div>
     </div>
+    <div class="version-bar">Alpha v0.8</div>
+
 
     <script type="module" src="script.js"></script>
 </body>
